2005-02-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* libs/gst/dataprotocol/dataprotocol.c: (gst_dp_dump_byte_array):
	Allocate the 1 byte more memory that was forgotten!!!!!
	fixes memory corruption on 64bit platforms

2005-02-15  Stefan Kost  <ensonic@users.sf.net>

	* docs/pwg/building-pads.xml:
	* docs/pwg/intro-basics.xml:
      fixed a few typos, relabeled introductionary list of types
	* docs/random/ensonic/dparams.txt:
      more notes abut dparam changes
	* libs/gst/control/dparam.c: (gst_dparam_attach):
	* libs/gst/control/dparammanager.c:
	* libs/gst/control/dparammanager.h:
      - many comments and notes on dparam implementation
      - new dparams are were not initialized to the default value
        from param spec

2005-02-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	submitted by: Peter Astakhov

	* po/LINGUAS:
	* po/ru.po:
	  adding Russian translation

2005-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* docs/gst/Makefile.am:
	* docs/libs/Makefile.am:
	  make sure popt is added to gtk-doc flags.  Fixes #147782.

2005-02-09  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/faq/using.xml:
	  Fix typo in FAQ (artssink => artsdsink)

2005-02-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* tools/gst-launch.1.in:
	  Fix typo (#166699).

2005-02-08  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/faq/using.xml:
	  Add -v argument to fakesrc/fakesink gst-launch line,
	  so that the promised output will actually show up.

2005-02-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstthread.c: (gst_thread_change_state):
	  Implement state-change error handling (#166073).

2005-02-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/gstqueue.c: (gst_queue_chain), (gst_queue_get):
	  Release interrupt after handling (#166250).

2005-02-08  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== release 0.8.9 ===
